feat: Add the optimisation to loop over all moths

--- a/notebooks/sandbox.ipynb
+++ b/notebooks/sandbox.ipynb
@@ -487,7 +487,7 @@
     "    },\n",
     "}\n",
     "\n",
-    "target_portfolio = optimise_markdowns(target_portfolio, 20)"
+    "final_portfolio = optimise_markdowns(target_portfolio)"
    ]
   },
   {
@@ -1511,7 +1511,7 @@
     }
    ],
    "source": [
-    "target_portfolio[pd.to_datetime(\"197210\", format = \"%Y%m\")]"
+    "final_portfolio[pd.to_datetime(\"197210\", format = \"%Y%m\")]"
    ]
   },
   {
